<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:orientation="vertical"
        android:backgroundTint="@color/white">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/gesturo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:fontFamily="@font/inter_semibold"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_us_1"
            android:fontFamily="@font/inter"
            android:textSize="12dp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feat"
            android:fontFamily="@font/inter_semibold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_us_2"
            android:fontFamily="@font/inter"
            android:textSize="12dp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"/>
    </LinearLayout>

</ScrollView>