<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.learn.LearnFragment"
    android:background="@color/bg_grey">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:title="@string/learn"
            android:paddingStart="20dp"
            app:titleTextColor="@color/blue6"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <RelativeLayout
                android:id="@+id/rlAlphabet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/alphabet_card"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvAlphabet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/alphabet"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:gravity="start"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/tvDescAl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvAlphabet"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_attr"
                    android:fontFamily="@font/inter"
                    android:padding="4dp"
                    android:text="@string/desc_alph"
                    android:textColor="@color/blue6"
                    android:textSize="12sp"
                    android:gravity="start"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/tvDescAl2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvDescAl"
                    android:layout_marginTop="2dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/slogan_alph"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textAlignment="viewStart" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="20dp"
                android:background="@drawable/numbers_card"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlAlphabet">

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="start"
                    android:text="@string/number"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvDescNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvNumber"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_attr"
                    android:fontFamily="@font/inter"
                    android:padding="4dp"
                    android:text="0-9"
                    android:textColor="@color/bg_btn_main"
                    android:textSize="12sp"
                    android:gravity="start"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/tvDescNum2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvDescNum"
                    android:layout_marginTop="2dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/slogan_num"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textAlignment="viewStart" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/quiz_card"
                android:padding="20dp"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlNumbers">

                <TextView
                    android:id="@+id/tvQuiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/quiz"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:gravity="start"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/tvDescQuiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvQuiz"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_attr"
                    android:fontFamily="@font/inter"
                    android:padding="4dp"
                    android:text="@string/desc_quiz"
                    android:textColor="@color/blue6"
                    android:textSize="12sp"
                    android:gravity="start"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/tvDescQuiz2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvDescQuiz"
                    android:layout_marginTop="2dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/slogan_quiz"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:textAlignment="viewStart" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
